--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,10 @@
-apply from: "$snippetsRepo/gradle-plugin-prj.gradle"
-apply from: "$snippetsRepo/maven.gradle"
+apply plugin: 'groovy'
+apply plugin: 'maven'
 
-//apply from: '../gradle-snippets/gradle-plugin-prj.gradle'
-//apply from: '../gradle-snippets/maven.gradle'
+sourceCompatibility = '1.7'
+targetCompatibility = '1.7'
+
+dependencies {
+    compile gradleApi()
+    compile localGroovy()
+}
