--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,5 @@
 group=xink.gradle
 artifact=gradle-ecj
-version=1.0-BETA
+version=1.1-SNAPSHOT
 
 systemProp.file.encoding=UTF-8
-
-snippetsRepo=https://raw.github.com/xinthink/gradle-snippets/master
