Update groupId, plugin id and installation instructions

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-group=xink.gradle
-artifact=gradle-ecj
+group=de.johni0702.gradle
+artifact=gradle-ecj-plugin
 version=1.1-SNAPSHOT
 
 systemProp.file.encoding=UTF-8
